Refactor dictionary, matching game to use words from API

--- a/packages/front-end/src/index.css
+++ b/packages/front-end/src/index.css
@@ -5,4 +5,7 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  --app-height: calc(
+    100vh - var(--app-shell-header-height, 0px) - var(--app-shell-footer-height, 0px) - var(--app-shell-padding) * 2
+  );
 }
