--- a/packages/front-end/src/pages/home/Home.module.css
+++ b/packages/front-end/src/pages/home/Home.module.css
@@ -1,14 +1,34 @@
+.container {
+  background-image: url('../../assets/images/items/Lake-Background.png');
+  background-size: cover;
+  background-position: center;
+  min-height: 100vh;
+  width: 100vw;
+  margin-left: calc(var(--mantine-spacing-md) * -1);
+  margin-right: calc(var(--mantine-spacing-md) * -1);
+  margin-top: calc(var(--mantine-spacing-md) * -1);
+  margin-bottom: calc(var(--mantine-spacing-md) * -1);
+  padding: var(--mantine-spacing-md);
+  position: relative;
+}
+
 .inner {
   display: flex;
   align-items: center;
   gap: 1rem;
   padding-top: calc(var(--mantine-spacing-xl) * 3);
   padding-bottom: calc(var(--mantine-spacing-xl) * 3);
+  padding-left: var(--mantine-spacing-xl);
+  padding-right: var(--mantine-spacing-xl);
 }
 
 .content {
   max-width: 750px;
   margin-right: calc(var(--mantine-spacing-xl) * 3);
+  padding: var(--mantine-spacing-xl);
+  background: rgba(255, 255, 255, 0.5);
+  border-radius: var(--mantine-radius-lg);
+  backdrop-filter: blur(4px);
 
   @media (max-width: $mantine-breakpoint-md) {
     max-width: 100%;
