--- a/packages/front-end/src/styles/FooterStyle.module.css
+++ b/packages/front-end/src/styles/FooterStyle.module.css
@@ -21,11 +21,13 @@
 }
 
 .angie {
-  color: light-dark(var(--mantine-color-black), var(--mantine-color-white));
+  color: light-dark(var(--mantine-color-pink-6), var(--mantine-color-pink-4));
   font-family: Outfit, var(--mantine-font-family);
   font-size: 44px;
   line-height: 1.2;
   font-weight: 500;
+
+
 
   @media (max-width: $mantine-breakpoint-xs) {
     font-size: 28px;
